@@ -1,3 +1,8 @@
+2013-02-13  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR target/56184
+	* gcc.target/arm/pr56184.C: New test.
+
 2013-02-13  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/56302
